<resources>
    <string name="app_name">example2</string>
    <string name="home1">connect. ask. learn.</string>
    <string name="home2">mentor</string>
    <string name="home3">me</string>
    <string name="login"><u>Login</u></string>
    <string name="Email">Email</string>
    <string name="Enter_Email">Enter Email</string>
    <string name="Password">Password</string>
    <string name="Enter_Password">Enter Password</string>
    <string name="forgot">Forgot Your Password?</string>
    <string name="get">Get Started!</string>
    <string name="Sign_Up"><u>Sign Up</u></string>
    <string name="pass">Password must be atleast 8 characters long</string>
    <string name="con">Contact Number</string>
    <string name="cont">Enter Contact Number</string>
    <string name="name">Name</string>
    <string name="EnterName">Enter Name</string>
    <string name="don">Don"'"t have an account?</string>
    <string name="country">Country</string>
    <string name="selectcountry">Select Country</string>
    <string name="city">City</string>
    <string name="selectcity">Select City</string>
    <string name="enteryourpassword">Enter your password</string>
    <string name="already">Already have an account? </string>
    <string name="log"><u>Log in</u></string>
    <string name="verify">Verify your phone number</string>
    <string name="we">We"'ve sent a code to</string>
    <string name="num">+ 92 321 2242022</string>
    <string name="ver">Verify</string>
    <string name="a1">1</string>
    <string name="a2">2</string>
    <string name="a3">3</string>
    <string name="a4">4</string>
    <string name="a5">5</string>
    <string name="a6">6</string>
    <string name="a7">7</string>
    <string name="a8">8</string>
    <string name="a9">9</string>
    <string name="a0">0</string>
    <string name="send">Send code again</string>
    <string name="clock">00:20</string>
    <string name="for_pass">Forgot Password?</string>
    <string name="worry">Don"'t worry it happens. Please enter the email associated with your account.</string>
    <string name="se">Send</string>
    <string name="Remember">Remember your password?</string>
    <string name="reset">Reset Password?</string>
    <string name="please">Please try a new password and re-enter the password. Type something you will</string>
    <string name="rem">remember!</string>
    <string name="new_password">New Password</string>
    <string name="enter_new">Enter New Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="re_enter">Re-enter Password</string>
    <string name="reset_pass">Reset Password</string>
    <string name="want">Don"'t want to reset password?</string>
    <string name="Hello">Hello,</string>
    <string name="Ali">Ali</string>
    <string name="text1">Ready for mentorship? Let"'s begin the journey!</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="browse">Browse Categories</string>
    <string name="find">Let"'s Find...</string>
    <string name="chats">Chats</string>
    <string name="my_profile">My Profile</string>
    <string name="edu">Education</string>
    <string name="per">Personal Growth</string>
    <string name="entre">Entrepreneurship</string>
    <string name="ok"> </string>
    <string name="All">All</string>
    <string name="mentors">Top mentors for you</string>
    <string name="view">View All</string>
    <string name="recent_mentors">Recent Mentors</string>
    <string name="edu_mentors">Education Mentors</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="mentor_1">Mentor 1</string>
    <string name="mentor_2">Mentor 2</string>
    <string name="mentor_3">Mentor 3</string>
    <string name="search_results">Search Results</string>
    <string name="filter">filter</string>
    <string name="Filter">Filter</string>
    <string name="my_community">My Community</string>
    <string name="all_messages">All Messages</string>
    <string name="jack_watson">Jack Watson</string>
    <string name="emma_phillips">Emma Phillips</string>
    <string name="_1_new_messages">1 New Messages</string>
    <string name="no_new_messages">No New Messages</string>
    <string name="john_cooper">John Cooper</string>
    <string name="hi_i_m">Hi, I\'m</string>
    <string name="john_cooper1">John Cooper</string>
    <string name="ux_designer_at">UX Designer At</string>
    <string name="google">Google</string>
    <string name="about_me">About me</string>
    <string name="long_text">I am a passionate UX designer at Google with a focus on creating user-centric and intuitive interfaces. With 10 years of experience, I have had the opportunity to work on diverse projects that have shaped my understanding of design principles and user experience.</string>
    <string name="my_expertise_include">My Expertise Include</string>
    <string name="career_advice">Career Advice</string>
    <string name="user_experience_design">User Experience Design</string>
    <string name="book_a_session">Book a Session</string>
    <string name="leadership">Leadership</string>
    <string name="prototyping">Prototyping</string>
    <string name="drop_a_review">Drop a review</string>
    <string name="join_community">Join Community</string>
    <string name="_4_8">4.8</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="type_your_experience">Type your experience...</string>
    <string name="drop_me_a_review">Drop me a review</string>
    <string name="upload">Upload</string>
    <string name="enter_description">Enter Description</string>
    <string name="book_an_appointment">Book an Appointment</string>
    <string name="_10_00_am">10.00 AM</string>
    <string name="_12_00_pm">12.00 PM</string>
    <string name="_11_00_am">11.00 AM</string>
    <string name="book_your_session">Book your Session</string>
    <string name="_1500_session">$1500/Session</string>
    <string name="available_time_slots">Available Time Slots</string>
    <string name="islamabad">Islamabad</string>
    <string name="my_reviews">My Reviews</string>
    <string name="booked_sessions">Booked Sessions</string>
    <string name="favorite_mentors">Favorite Mentors</string>
    <string name="ali">Ali</string>
    <string name="ali_gmail_com">ali@gmail.com</string>
    <string name="_92_321_2242022">+92 321 2242022</string>
    <string name="pakistan">Pakistan</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="countr">Country</string>
    <string name="cit">City</string>
    <string name="update_profile">Update Profile</string>
    <string name="_50_08">50:08</string>
    <string name="john_cooper_s">John Cooper\'s</string>
    <string name="community">Community</string>
    <string name="how_was_your_experience_with_his">How was your experience with his</string>
    <string name="mentorship_satisfied">mentorship? Satisfied?</string>
    <string name="worth_it">Worth it!!</string>
    <string name="impressive">Impressive</string>
    <string name="_10_30">10:30</string>
    <string name="you_re_missing_out_go_take_it">You\'re missing out go take it!!</string>
    <string name="type_something">Type Something ...</string>
    <string name="_10_32">10:32</string>
    <string name="_10_32_">10:32</string>
    <string name="_10_32__">10:32</string>
    <string name="ux_designer_google">UX Designer @ Google</string>
    <string name="martina_watson">Martina Watson</string>
    <string name="lead_technology_officer">Lead - Technology Officer</string>
    <string name="emma">Emma</string>
    <string name="lead_corporate">Lead - Corporate</string>
    <string name="micheal_drake">Micheal Drake</string>
    <string name="nlp_expert">NLP Expert</string>
    <string name="alex">Alex</string>
    <string name="android_developer">Android Developer</string>
    <string name="jane">Jane</string>
    <string name="software_engineer">Software Engineer</string>
    <string name="available">Available</string>
    <string name="add_new_mentor">Add New Mentor</string>
    <string name="help_us_expand">Help us expand</string>
    <string name="upload_photo">Upload photo</string>
    <string name="upload_video">Upload video</string>
    <string name="status">Status</string>
    <string name="description">Description</string>
    <string name="name0">Name</string>
    <string name="sample_1">Sample 1</string>
    <string name="lead_technical_officer">Lead - Technical Officer</string>
    <string name="sample_2">Sample 2</string>
    <string name="sample_3">Sample 3</string>
    <string name="sample_4">Sample 4</string>
    <string name="sample_5">Sample 5</string>


</resources>