<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7F7F6"
    tools:context=".MainActivity6">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/reset"
        android:textColor="#155F64"
        android:textSize="27sp" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="155dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/please"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="200dp"
    android:fontFamily="@font/noto_sans"
    android:text="@string/rem"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:textSize="16sp"
        />

    <TextView
        android:id="@+id/new_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:fontFamily="@font/noto_sans"
        android:text="@string/new_password"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new"
        android:textColor="#585555"
        android:layout_marginTop="285dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="17sp"
        android:background="@drawable/emailbox"
        android:padding="10dp"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="360dp"
        android:ems="10"
        android:fontFamily="@font/noto_sans"
        android:text="@string/confirm"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_enter"
        android:textColor="#585555"
        android:layout_marginTop="395dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="17sp"
        android:background="@drawable/emailbox"
        android:padding="10dp"
        android:inputType="text"
        />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="170dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/square"
        android:backgroundTint="#155F64"
        android:text="@string/reset_pass"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="540dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/want"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/log3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="540dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="#155F64"
        android:textSize="15sp" />

    <Button
        android:id="@+id/back_forgot"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/left_arrow_back_svgrepo_com"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#155F64"
        />





</RelativeLayout>