<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECF1F0"
    tools:context=".c_signup">

    <View
        android:id="@+id/circle1"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-90dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/circle"
        android:clickable="false"
        android:orientation="horizontal"
        android:visibility="visible"
        app:cornerRadius="0dp" />

    <View
        android:id="@+id/circle2"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-80dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/circle"
        android:clickable="false"
        android:orientation="horizontal"
        android:visibility="visible"
        app:cornerRadius="0dp" />

    <TextView
        android:id="@+id/home2"
        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="65dp"
        android:ems="10"
        android:fontFamily="@font/salsa"
        android:text="@string/home2"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/home3"
        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="65dp"
        android:ems="10"
        android:fontFamily="@font/salsa"
        android:text="@string/home3"
        android:textColor="#FEBF0E"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:layout_width="500dp"
        android:layout_height="670dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-20dp"
        android:background="@drawable/curved_square"
        />

    <TextView
        android:id="@+id/gets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:textColor="@color/white"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/get"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="195dp"
        android:ems="10"
        android:fontFamily="@font/noto_sans"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EnterName"
        android:textColor="#585555"
        android:layout_marginTop="230dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="17sp"
        android:padding="10dp"
        android:background="@drawable/emailbox"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/Email2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="275dp"
        android:ems="10"
        android:fontFamily="@font/noto_sans"
        android:text="@string/Email"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_Email"
        android:textColor="#585555"
        android:layout_marginTop="310dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="17sp"
        android:background="@drawable/emailbox"
        android:padding="10dp"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="355dp"
        android:ems="10"
        android:fontFamily="@font/noto_sans"
        android:text="@string/con"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cont"
        android:textColor="#585555"
        android:layout_marginTop="390dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="17sp"
        android:background="@drawable/emailbox"
        android:padding="10dp"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="435dp"
        android:ems="10"
        android:fontFamily="@font/noto_sans"
        android:text="@string/country"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/selectcountry"
        android:textColor="#585555"
        android:layout_marginTop="470dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="17sp"
        android:background="@drawable/emailbox"
        android:padding="10dp"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="515dp"
        android:ems="10"
        android:fontFamily="@font/noto_sans"
        android:text="@string/city"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/selectcity"
        android:textColor="#585555"
        android:layout_marginTop="550dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="17sp"
        android:background="@drawable/emailbox"
        android:padding="10dp"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="595dp"
        android:ems="10"
        android:fontFamily="@font/noto_sans"
        android:text="@string/Password"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enteryourpassword"
        android:textColor="#585555"
        android:layout_marginTop="630dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="17sp"
        android:background="@drawable/emailbox"
        android:padding="10dp"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/lon"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="675dp"
        android:ems="10"
        android:fontFamily="@font/noto_sans"
        android:text="@string/pass"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="705dp"
        android:text="@string/Sign_Up"
        android:textColor="#44B6BD"
        android:background="@drawable/square"
        android:backgroundTint="@color/white"
        android:clickable="true"
        />

    <TextView
        android:id="@+id/already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="760dp"
        android:ems="10"
        android:fontFamily="@font/noto_sans"
        android:text="@string/already"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="760dp"
        android:ems="10"
        android:fontFamily="@font/noto_sans"
        android:text="@string/log"
        android:textStyle="bold"
        android:linksClickable="true"
        android:textColor="#155F64"
        android:textSize="13sp" />





</RelativeLayout>